Feat: Ajout de la première partie du module de reset de mot passe
 - Ajout de la vue forgot-password (formulaire de demande de reset de mot de passe) et du contrôleur associé.

- Ajout du modèle PasswordReset pour la réinitialisation du mot de passe

- Ajout d'une animation sur le champs qui a le focus dans les formulaires

- Ajout d'une validation côté front pour les formulaires d'inscription et de connexion

- Utilisation de PHPMailer pour la réinitialisation du mot de passe couplé avec Papercut SMTP

- Modification du DockerFile ainsi que du .htaccess afin d'activer la mise en cache et la compression GZip afin d'améliorer les performances

- Modification du router.php afin de rendre l'ajout de route plus lisible

- Ajout du fichier robots.txt

- Ajout de 2 Traits: ExceptionHanlerTrait qui gère les exception et HandleFormValidation qui gère les erreurs de validation

-  Création de classes héritées de TestCase afin de créer un environnement de test correctement isolé

- Réécriture de certains tests car créaient des effets de bord + ajout de nouveau pour couvrir les nouvelles classes et nouveaux modèles.

- Modification du template default afin de pouvoir y incorporer des métadonnée ou des fichiers de style.

--- a/public/assets/css/style-input.css
+++ b/public/assets/css/style-input.css
@@ -19,9 +19,32 @@
 @font-face {
     font-family: "RobotoCondensed";
     src: url(../font/RobotoCondensed-Bold.ttf);
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Roboto";
     src: url(../font/Roboto-Regular.ttf);
+    font-display: swap;
+}
+
+.arrow-indicator::after {
+    content: "⬅";
+    position: absolute;
+    top: 30%;
+    right: -30px;
+    transform: translateY(-50%);
+    font-size: 1.25rem;
+    animation: slideLeft 0.8s infinite;
+    color: var(--font-color);
+}
+
+@keyframes slideLeft {
+    0%,
+    100% {
+        transform: translateY(-50%) translateY(0);
+    }
+    50% {
+        transform: translateY(-50%) translateX(-6px);
+    }
 }
