--- a/public/assets/css/style-input.css
+++ b/public/assets/css/style-input.css
@@ -48,3 +48,22 @@
         transform: translateY(-50%) translateX(-6px);
     }
 }
+
+button:disabled {
+    opacity: 0.5; /* Visuellement atténué */
+    cursor: not-allowed; /* Curseur barré au survol */
+}
+
+button {
+    transition:
+        opacity 0.4s ease-in-out,
+        background-color 0.4s ease-in-out;
+}
+
+.list > li {
+    opacity: 0;
+    transform: translateY(15px);
+    transition:
+        opacity 0.5s ease,
+        transform 0.5s ease;
+}
